# mailings_project

./: .env.example  .flake8  .gitignore  pyproject.toml
config/: settings.py  urls.py
mailings/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: send_mailings.py
mailings/migrations/: 0001_initial.py  0002_mailingattempt.py  0003_mailings_owner_alter_mailingattempt_mailing.py  0004_contact_owner_mailings_is_active_and_more.py  0005_alter_contact_options_alter_mailings_options_and_more.py
mailings/templates/mailings/: base.html  contact_confirm_delete.html  contact_detail.html  contact_form.html  contact_list.html  home.html  mailing_statistics.html  mailings_confirm_delete.html  mailings_detail.html  mailings_form.html  mailings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  statistics.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html  user_list.html
